[package]
name = "pikpak-webdav"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.51"
bytes = "=1.0.1"
dashmap = "=4.0.2"
futures-util = "=0.3"
headers = "=0.3.4"
hyper = { version = "0.14.18", features = ["server", "http2"] }
moka = { version = "0.9.2", default-features = false, features = ["future"] }
openssl-probe = { version = "=0.1.4", optional = true }
openssl-sys = { version = "=0.9.68", optional = true }
reqwest = { version = "=0.11.7", default-features = false, features = ["json", "gzip", "blocking"] }
serde = { version = "=1.0.127", features = ["derive"] }
serde_json = "=1.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
structopt = "=0.3.22"
time = { version = "=0.3", features = ["formatting", "parsing"] }
tokio = { version = "=1.10.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros", "parking_lot", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
url = "=2.2.2"
dav-server = { version = "0.5.0", default-features = false, features = ["hyper"] }
# webdav-handler = { version = "=0.2.0", default-features = false, features = ["hyper"] }
sha-1 = { version = "0.9", default-features = false }
hex-literal = "0.3.4"
hmac-sha = "0.6"
base64 = "0.13.0"
httpdate = "1.0.2"

[features]
default = ["rustls-tls", "atomic64"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "openssl-probe", "openssl-sys"]
atomic64 = ["moka/atomic64"]

[patch.crates-io]
# #webdav-handler = { git = "https://github.com/messense/webdav-handler-rs.git", branch = "aliyundrive" }

[profile.release]
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
